// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`side mode's container coverage > 2312.17141.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_flex_figure": 3,
    "ltx_inline-block": 4,
    "ltx_note": 2,
  },
  "connected": "871/880",
}
`;

exports[`side mode's container coverage > 2312.17527.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_note": 4,
  },
  "connected": "164/168",
}
`;

exports[`side mode's container coverage > 2401.00418.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_note": 2,
  },
  "connected": "327/329",
}
`;

exports[`side mode's container coverage > 2401.00596.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_note": 15,
  },
  "connected": "175/190",
}
`;

exports[`side mode's container coverage > 2410.00260.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_flex_figure": 2,
    "ltx_note": 2,
  },
  "connected": "288/292",
}
`;

exports[`side mode's container coverage > 2507.00150.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_note": 7,
  },
  "connected": "194/201",
}
`;

exports[`side mode's container coverage > 2608.29808.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {},
  "connected": "437/437",
}
`;

exports[`side mode's container coverage > 2608.30667.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {},
  "connected": "1/1",
}
`;

exports[`side mode's container coverage > 2609.00245.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_note": 11,
  },
  "connected": "666/677",
}
`;

exports[`side mode's container coverage > 2609.00246.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_note": 9,
  },
  "connected": "571/580",
}
`;

exports[`side mode's container coverage > 2609.03768.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {},
  "connected": "178/178",
}
`;

exports[`side mode's container coverage > 2609.04056.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "ltx_note": 2,
  },
  "connected": "767/769",
}
`;

exports[`side mode's container coverage > synthetic-structures.html: whether a pair reaches the translation root; the snapshot records how many each exclusion blocked 1`] = `
{
  "blockedBy": {
    "tbody": 2,
  },
  "connected": "32/34",
}
`;
